[project]
name = "sdc"
version = "0.5.1"
authors = [
  {name="Marco Wolsza", email="marco.wolsza@uni-jena.de" },
]
description = "Tools and tutorials for the SALDi Data Cube (SDC)"
readme = "README.md"
license = {text = "MIT License"}
requires-python = "<3.13"
dependencies = [
    "dask",
    "dask-jobqueue>=0.8.5",
    "datashader",
    "flox",
    "geopandas",
    "hvplot",
    "jupyterlab>=4.1.0",
    "matplotlib",
    "numbagg>=0.8.0",
    "odc-stac<=0.3.9",
    "rioxarray",
    "spyndex",
    "xarray>=2024.2.0",
    "xarray-spatial",
]

[project.optional-dependencies]
viz = [
    "datashader",
    "hvplot",
    "matplotlib",
]
jupyter_ext = [
    "dask-labextension",
]

[project.urls]
Repository = "https://github.com/Jena-Earth-Observation-School/sdc-tools"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
