[project]
name = "sdc"
version = "0.11.0"
authors = [
  {name="Marco Wolsza", email="marco.wolsza@uni-jena.de" },
]
description = "Tools and tutorials for the SALDi Data Cube (SDC)"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "cftime",
    "dask",
    "dask-jobqueue",
    "dask-labextension",
    "datashader",
    "flox",
    "geopandas",
    "gdal",
    "hvplot",
    "h5netcdf",
    "jupyterlab",
    "jupyter-book==1.0.4",
    "matplotlib",
    "nodejs",
    "numbagg",
    "odc-stac",
    "planetary-computer",
    "rioxarray",
    "rio-cogeo",
    "rio-stac",
    "spyndex",
    "xarray",
    "xarray-spatial",
    "xvec"
]

[project.urls]
Repository = "https://github.com/Jena-Earth-Observation-School/sdc-tools"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true
